Fix mobile overflow.

--- a/css/about.css
+++ b/css/about.css
@@ -3,6 +3,7 @@ body {
   flex-direction: column;
   align-items: center;
   padding-top: 10vh;
+  overflow: hidden;
 }
 
 main {
