--- a/css/projects.css
+++ b/css/projects.css
@@ -3,6 +3,7 @@ body {
   flex-direction: column;
   align-items: center;
   padding-top: 10vh;
+  overflow-x: hidden;
 }
 
 .projects-container {
